--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,12 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 Jekyll integration by Chris Bobbe | chrisbobbe.github.io
 -->
 <html>
+  <head>
 	{%- include head.html -%}
+    {% seo %}
 	<body>
 		{{- content -}}
 		{%- include footer.html -%}
-	</body>
+	</body>  
+  </head>
 </html>
