--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -66,7 +66,7 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
+		color: #123;
 
 		&.is-loading * {
 			@include vendor('transition', 'none !important');
@@ -79,12 +79,12 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
+		color: #123;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: #333;
 		line-height: 1.5em;
 	}
 
@@ -93,7 +93,7 @@
 		text-decoration: none;
 
 		strong {
-			color: #333;
+			color: #123;
 		}
 	}
 
@@ -456,7 +456,7 @@
 		margin-bottom: 40px;
 
 		header {
-			color: #666;
+			color: #333;
 			text-align: center;
 			background: #fff;
 			margin: 0;
@@ -582,7 +582,7 @@
 				a {
 					display: block;
 					padding: 0.5em 1.5em 0.5em 1.5em;
-					color: rgba(255, 255, 255, 0.5);
+					color: rgba(255, 255, 255, 0.75);
 					text-decoration: none;
 					outline: 0;
 					border: 0;
@@ -596,7 +596,7 @@
 						&:before {
 							position: absolute;
 							left: 0;
-							color: #41484c;
+							color: #9faeb7;
 							text-align: center;
 							width: 1.25em;
 							line-height: 1.75em;
